@@ -28,7 +28,7 @@
 
 import unittest
 
-from modules.buildsteps import UpdateChangeLogsWithReviewerStep, UpdateStep
+from modules.buildsteps import UpdateChangeLogsWithReviewerStep, UpdateStep, PromptForBugOrTitleStep
 from modules.mock_bugzillatool import MockBugzillaTool
 from modules.outputcapture import OutputCapture
 from modules.mock import Mock
@@ -43,12 +43,21 @@ class UpdateChangeLogsWithReviewerStepTest(unittest.TestCase):
 
 
 class StepsTest(unittest.TestCase):
-    def _run_step(self, step, options, state=None):
+    def _run_step(self, step, tool=None, options=None, state=None):
+        if not tool:
+            tool = MockBugzillaTool()
+        if not options:
+            options = Mock()
         if not state:
             state = {}
-        step(MockBugzillaTool(), options).run(state)
+        step(tool, options).run(state)
 
     def test_update_step(self):
         options = Mock()
         options.update = True
         self._run_step(UpdateStep, options)
+
+    def test_prompt_for_bug_or_title_step(self):
+        tool = MockBugzillaTool()
+        tool.user.prompt = lambda message: 42
+        self._run_step(PromptForBugOrTitleStep, tool=tool)
