@@ -2,6 +2,18 @@
 
         Reviewed by Eric Seidel.
 
+        [bzt] Don't crash if user types a number during PromptForBugOrTitleStep
+        https://bugs.webkit.org/show_bug.cgi?id=33038
+
+        Simple fix with test.
+
+        * Scripts/modules/buildsteps.py:
+        * Scripts/modules/buildsteps_unittest.py:
+
+2009-12-29  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         [bzt] post-diff requires reading to the end
         https://bugs.webkit.org/show_bug.cgi?id=33036
 
